<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/edit_placename"
            style="@style/text_view_style"
            android:hint="@string/hint_name"
            android:inputType="textAutoComplete" />

        <Button
            android:id="@+id/place_date_button"
            style="@style/button_style"
            android:text="@string/enter_date"/>


        <EditText
            android:id="@+id/edit_place_notes"
            style="@style/text_view_style"
            android:hint="@string/hint_notes"
            android:inputType="textAutoComplete" />

        <ImageView
            android:id="@+id/place_photo"
            android:adjustViewBounds="true"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            android:layout_width="match_parent"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_edit_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_save_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_delete_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>